# OpenSwiftStudio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: legal.md  limitations.md
examples/hello-world/: Package.swift
scripts/: install-dev.ps1  watch-dev.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/auth/: credential_store.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/project/: mod.rs  parser.rs  run.rs  session.rs  state.rs  watcher.rs
src-tauri/src/setup/: checks.rs  installs.rs  mod.rs  selftest.rs  state.rs  xtool.rs
src/components/: ActivityBar.tsx  CommandPalette.tsx  ConsoleView.tsx  EditorArea.tsx  Panel.tsx  ProjectTreeView.tsx  SetupStepper.tsx  SetupWizard.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: projectActions.ts  projectApi.ts  runController.ts  sessionController.ts  setupApi.ts
src/state/: appState.ts  projectState.ts  setupState.ts
src/styles/: layout.css  setup-wizard.css  vscode-theme.css
