[package]
name = "openswiftstudio"
version = "0.0.1"
description = "Open-source standalone IDE for iOS development on Windows. No Mac required."
authors = ["OpenSwiftStudio contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

# Larger optimizations for release; faster compile for dev.
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "openswiftstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
